# eggs

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  configure.ac  notes.txt  readme.md  todo.md
assets/: CMakeLists.txt
cmake/: FindSDL2IMAGE.cmake
src/: CMakeLists.txt  Makefile.am  assets.h  camera.cpp  camera.h  engine.cpp  engine.h  entity.cpp  entity.h  entity_type.h  event_queue.cpp  event_queue.h  icon.h  input.cpp  input.h  main.cpp  position.h  screen.cpp  screen.h  sdl_helpers.h  state.cpp  state.h  tags  timer.cpp  timer.h  world.cpp  world.h
